<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_name">Login name</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="switch_what">What does this do?</string>
    <string name="cnt_desc_camera">Camera Icon</string>
    <string name="sign_in">Sign in !</string>
    <string name="button_forecast">Weather Forecast</string>

    <string name="switch_on">Switch is on</string>
    <string name="switch_off">Switch is off</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Confirmation</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="response">Response</string>
    <string name="here_response">Here is my response</string>

    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>